<?xml version="1.0" encoding="UTF-8"?>
<!--

    DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.

    Copyright (c) 2012 Oracle and/or its affiliates. All rights reserved.

    The contents of this file are subject to the terms of either the GNU
    General Public License Version 2 only ("GPL") or the Common Development
    and Distribution License("CDDL") (collectively, the "License").  You
    may not use this file except in compliance with the License.  You can
    obtain a copy of the License at
    https://glassfish.dev.java.net/public/CDDL+GPL_1_1.html
    or packager/legal/LICENSE.txt.  See the License for the specific
    language governing permissions and limitations under the License.

    When distributing the software, include this License Header Notice in each
    file and include the License file at packager/legal/LICENSE.txt.

    GPL Classpath Exception:
    Oracle designates this particular file as subject to the "Classpath"
    exception as provided by Oracle in the GPL Version 2 section of the License
    file that accompanied this code.

    Modifications:
    If applicable, add the following below the License Header, with the fields
    enclosed by brackets [] replaced by your own identifying information:
    "Portions Copyright [year] [name of copyright owner]"

    Contributor(s):
    If you wish your version of this file to be governed by only the CDDL or
    only the GPL Version 2, indicate your decision by adding "[Contributor]
    elects to include this software in this distribution under the [CDDL or GPL
    Version 2] license."  If you don't indicate a single choice of license, a
    recipient has the option to distribute your version of this file under
    either the CDDL, the GPL Version 2 or to extend the choice of license to
    its licensees as provided above.  However, if you add GPL Version 2 code
    and therefore, elected the GPL Version 2 license, then the option applies
    only if the new code is made subject to such option by the copyright
    holder.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>com.sun.xml.ws</groupId>
        <artifactId>jaxws-ri-bom</artifactId>
        <version>2.2.8-SNAPSHOT</version>
        <relativePath>bom/pom.xml</relativePath>
    </parent>

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.sun.xml.ws</groupId>
    <artifactId>project</artifactId>
    <packaging>pom</packaging>
    <name>JAX-WS (JSR-224) Reference Implementation</name>
    <description>Open source Reference Implementation of JSR-224: Java API for XML Web Services</description>

    <repositories>
        <repository>
            <id>releases.java.net</id>
            <url>https://maven.java.net/content/repositories/releases/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>staging.java.net</id>
            <url>https://maven.java.net/content/groups/staging/</url>
            <layout>default</layout>
        </repository>
        <repository>
            <id>eclipse</id>
            <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
            <layout>default</layout>
        </repository>
    </repositories>

    <properties>
        <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javadoc.links.dir>${project.parent.basedir}/src/main/javadoc-link</javadoc.links.dir>
        <javadoc.links.offline>false</javadoc.links.offline>
    </properties>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>2.4.1</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>2.5</version>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>buildnumber-maven-plugin</artifactId>
                    <version>1.1</version>
                    <configuration>
                        <locale>en-US</locale>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.glassfish.hk2</groupId>
                    <artifactId>osgiversion-maven-plugin</artifactId>
                    <version>2.1.14</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>2.4</version>
                    <executions>
                        <execution>
                            <phase>validate</phase>
                            <goals>
                                <goal>copy</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${endorsed.dir}</outputDirectory>
                                <silent>false</silent>
                                <artifactItems>
                                    <artifactItem>
                                        <groupId>javax.xml.bind</groupId>
                                        <artifactId>jaxb-api</artifactId>
                                        <type>jar</type>
                                    </artifactItem>
                                    <artifactItem>
                                        <groupId>javax.xml.soap</groupId>
                                        <artifactId>saaj-api</artifactId>
                                        <type>jar</type>
                                    </artifactItem>
                                    <artifactItem>
                                        <groupId>javax.xml.ws</groupId>
                                        <artifactId>jaxws-api</artifactId>
                                        <type>jar</type>
                                    </artifactItem>
                                </artifactItems>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>com.sun.wts.tools.ant</groupId>
                    <artifactId>package-rename-task</artifactId>
                    <version>1.2-SNAPSHOT</version>
                </plugin>
                <plugin>
                    <groupId>com.sun.istack</groupId>
                    <artifactId>istack-commons-maven-plugin</artifactId>
                    <version>${istack-commons.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>2.5.1</version>
                    <configuration>
                        <source>1.6</source>
                        <target>1.6</target>
                        <fork>true</fork>
                        <compilerArguments>
                            <endorseddirs>${endorsed.dir}</endorseddirs>
                        </compilerArguments>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>2.12</version>
                    <configuration>
                        <forkMode>once</forkMode>
                        <argLine>-Djava.endorsed.dirs="${endorsed.dir}"</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>2.4</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Specification-Title>The Java API for XML Web Services</Specification-Title>
                                <Specification-Version>2.2</Specification-Version>
                                <Implementation-Title>JAX-WS Implementation</Implementation-Title>
                                <Implementation-Version>${project.version}</Implementation-Version>
                                <Implementation-Vendor>Sun Microsystems Inc</Implementation-Vendor>
                                <Implementation-Vendor-Id>com.sun</Implementation-Vendor-Id>
                                <Build-Id>${project.version}</Build-Id>
                                <SVN-Revision>${buildNumber}</SVN-Revision>
                                <SVN-URL>${project.scm.connection}</SVN-URL>
                                <Build-Version>JAX-WS RI ${project.version}</Build-Version>
                                <Major-Version>${project.osgi.version}</Major-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>2.1.2</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Specification-Title>The Java API for XML Web Services</Specification-Title>
                                <Specification-Version>2.2</Specification-Version>
                                <Implementation-Title>JAX-WS Implementation</Implementation-Title>
                                <Implementation-Version>${project.version}</Implementation-Version>
                                <Implementation-Vendor>Sun Microsystems Inc</Implementation-Vendor>
                                <Implementation-Vendor-Id>com.sun</Implementation-Vendor-Id>
                                <Build-Id>${project.version}</Build-Id>
                                <SVN-Revision>${buildNumber}</SVN-Revision>
                                <SVN-URL>${project.scm.connection}</SVN-URL>
                                <Build-Version>JAX-WS RI ${project.version}</Build-Version>
                                <Major-Version>${project.osgi.version}</Major-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>2.3</version>
                    <configuration>
                        <archive>
                            <manifestEntries>
                                <Specification-Title>The Java API for XML Web Services</Specification-Title>
                                <Specification-Version>2.2</Specification-Version>
                                <Implementation-Title>JAX-WS Implementation</Implementation-Title>
                                <Implementation-Version>${project.version}</Implementation-Version>
                                <Implementation-Vendor>Sun Microsystems Inc</Implementation-Vendor>
                                <Implementation-Vendor-Id>com.sun</Implementation-Vendor-Id>
                                <Build-Id>${project.version}</Build-Id>
                                <SVN-Revision>${buildNumber}</SVN-Revision>
                                <SVN-URL>${project.scm.connection}</SVN-URL>
                                <Build-Version>JAX-WS RI ${project.version}</Build-Version>
                                <Major-Version>${project.osgi.version}</Major-Version>
                            </manifestEntries>
                        </archive>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>2.8.1</version>
                    <configuration>
                        <aggregate>false</aggregate>
                        <dependencySourceExcludes>
                            <dependencySourceExclude>com.sun.xml.ws:*</dependencySourceExclude>
                        </dependencySourceExcludes>
                        <offlineLinks>
                            <offlineLink>
                                <url>http://docs.oracle.com/javase/6/docs/api/</url>
                                <location>${javadoc.links.dir}/javase6/</location>
                            </offlineLink>
                            <offlineLink>
                                <url>http://jaxb.java.net/nonav/${jaxb-impl.version}/docs/api/</url>
                                <location>${javadoc.links.dir}/jaxb-api/</location>
                            </offlineLink>
                            <offlineLink>
                                <url>http://jax-ws.java.net/nonav/jaxws-api/2.2/</url>
                                <location>${javadoc.links.dir}/jaxws-api/</location>
                            </offlineLink>
                        </offlineLinks>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.7</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>2.3.7</version>
                    <extensions>true</extensions>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <id>create-buildnumber</id>
                        <goals>
                            <goal>create</goal>
                        </goals>
                        <configuration>
                            <getRevisionOnlyOnce>true</getRevisionOnlyOnce>
                            <revisionOnScmFailure>unknown</revisionOnScmFailure>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.glassfish.hk2</groupId>
                <artifactId>osgiversion-maven-plugin</artifactId>
                <executions>
                    <!-- Since we don't want qualifier like b05 or SNAPSHOT to appear
                    in package version attribute, we use the following goal to
                    populate a project property with an OSGi version which is
                    equivalent to maven version without qualifier and then use that
                    property in osgi.bundle while exporting. -->
                    <execution>
                        <id>compute-osgi-version</id>
                        <goals>
                            <goal>compute-osgi-version</goal>
                        </goals>
                        <configuration>
                            <dropVersionComponent>qualifier</dropVersionComponent>
                            <versionPropertyName>project.osgi.version</versionPropertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <modules>
        <module>bom</module>
        <module>docs</module>
        <module>bundles/jaxws-rt</module>
        <module>bundles/jaxws-tools</module>
        <module>extras</module>
        <module>bundles</module>
    </modules>

</project>